<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration_title"
            android:textSize="@dimen/menu_header_textsize" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:id="@+id/name"
            android:layout_width="@dimen/HelloUser_button_width"
            android:layout_height="wrap_content"
            android:hint="@string/reg_inp_name"/>
        <EditText
            android:id="@+id/surname"
            android:layout_width="@dimen/HelloUser_button_width"
            android:layout_height="wrap_content"
            android:hint="@string/reg_inp_surname"/>
        <EditText
            android:id="@+id/group"
            android:layout_width="@dimen/HelloUser_button_width"
            android:layout_height="wrap_content"
            android:hint="@string/reg_inp_group"/>
        <EditText
            android:id="@+id/login"
            android:layout_width="@dimen/HelloUser_button_width"
            android:layout_height="wrap_content"
            android:hint="@string/reg_inp_login"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="@dimen/HelloUser_button_width"
            android:layout_height="wrap_content"
            android:hint="@string/reg_inp_password"/>
        <Button
            android:id="@+id/reg"
            android:layout_width="@dimen/HelloUser_button_width"
            android:layout_height="@dimen/HelloUser_button_height"
            android:text="@string/reg_but"/>
    </LinearLayout>
</LinearLayout>