<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center">
        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/HelloUser_login"/>
        <EditText
            android:inputType="textPassword"
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/HelloUser_password"/>
        <Button
            android:id="@+id/but_inp"
            android:layout_width="@dimen/HelloUser_button_width"
            android:layout_height="@dimen/HelloUser_button_height"
            android:text="@string/HelloUser_button_input"
            android:textSize="@dimen/but_input_textsize"/>
    </LinearLayout>


    <Button
        android:id="@+id/but_reg"
        android:layout_width="@dimen/HelloUser_button_width"
        android:layout_height="@dimen/HelloUser_button_height"
        android:text="@string/HelloUser_button_reg"
        android:textSize="@dimen/but_input_textsize"
        android:layout_marginTop="@dimen/but_reg_margintop"/>
</LinearLayout>