<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_color">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_sec1_th1_header"
            android:textSize="45sp"
            android:padding="10dp"
            android:textIsSelectable="true"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="20dp">
                <LinearLayout
                    android:id="@+id/layout1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/text_test_sec1_th1_task1"/>
                    <EditText
                        android:id="@+id/edit1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/test_sec1_th1_task1_edittext"
                        android:layout_marginBottom="40dp"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout2"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/text_test_sec1_th1_task2"/>
                    <EditText
                        android:id="@+id/edit2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/test_sec1_th1_task1_edittext"
                        android:layout_marginBottom="40dp"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout3"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:text="@string/text_test_sec1_th1_task3"/>
                        <EditText
                            android:id="@+id/edit3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/test_sec1_th1_task1_edittext"
                            android:layout_marginBottom="40dp"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout4"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/text_test_sec1_th1_task4_1"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="40dp">
                        <TextView
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:text="@string/text_test_sec1_th1_task4_2"
                            android:gravity="center_horizontal"/>
                        <EditText
                            android:id="@+id/edit4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/test_sec1_th1_task1_edittext" />
                        <TextView
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:text="@string/text_test_sec1_th1_task4_3"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout5"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/text_test_sec1_th1_task5"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <CheckBox
                            android:id="@+id/checkbox1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_test_sec1_th1_task5_1"
                            android:paddingLeft="@dimen/test_sec1_th1_padding"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <CheckBox
                            android:id="@+id/checkbox2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_test_sec1_th1_task5_2"
                            android:paddingLeft="@dimen/test_sec1_th1_padding"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <CheckBox
                            android:id="@+id/checkbox3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_test_sec1_th1_task5_3"
                            android:paddingStart="@dimen/test_sec1_th1_padding" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="40dp">
                        <CheckBox
                            android:id="@+id/checkbox4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_test_sec1_th1_task5_4"
                            android:paddingLeft="@dimen/test_sec1_th1_padding"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout6"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:text="@string/text_test_sec1_th1_task6_1"
                        android:layout_marginTop="20dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:text="@string/text_test_sec1_th1_task6_2"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:orientation="horizontal">
                        <EditText
                            android:layout_weight="1"
                            android:id="@+id/edit6_1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/test_sec1_th1_task1_edittext"/>
                        <TextView
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="17sp"
                            android:text="@string/text_test_sec1_th1_task6_3"
                            android:padding="@dimen/test_sec1_th1_padding"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="17sp"
                            android:text="@string/text_test_sec1_th1_task6_4"/>
                        <EditText
                            android:layout_weight="1"
                            android:id="@+id/edit6_2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/test_sec1_th1_task1_edittext"/>
                        <TextView
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="17sp"
                            android:text="@string/text_test_sec1_th1_task6_5"/>
                    </LinearLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:text="@string/text_test_sec1_th1_task6_6"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="17sp"
                            android:text="@string/text_test_sec1_th1_task6_7"/>
                        <EditText
                            android:layout_weight="1"
                            android:id="@+id/edit6_3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/test_sec1_th1_task1_edittext"/>
                        <TextView
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="17sp"
                            android:text="@string/text_test_sec1_th1_task6_8"/>
                    </LinearLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:text="@string/text_test_sec1_th1_task6_9"/>
                </LinearLayout>
                <Button
                    android:id="@+id/butcheck"
                    android:layout_width="@dimen/menu_button_width"
                    android:layout_height="@dimen/menu_button_height"
                    android:text="@string/test_sec1_th1_butcheck"
                    android:layout_marginBottom="60dp"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>
