<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_color">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_title"
            android:layout_margin="@dimen/menu_header_margin"
            android:textSize="@dimen/menu_header_textsize"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_line_height"
        android:background="@color/line_color"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/menu_learn"
            android:layout_width="@dimen/menu_button_width"
            android:layout_height="@dimen/menu_button_height"
            android:text="@string/menu_learn"
            android:textSize="@dimen/menu_sections_textSize"
            android:layout_marginTop="@dimen/menu_button_marginTop"/>
        <Button
            android:id="@+id/menu_test"
            android:layout_width="@dimen/menu_button_width"
            android:layout_height="@dimen/menu_button_height"
            android:text="@string/menu_test"
            android:textSize="@dimen/menu_sections_textSize"
            android:layout_marginTop="@dimen/menu_button_marginTop"/>
        <Button
            android:id="@+id/menu_options"
            android:layout_width="@dimen/menu_button_width"
            android:layout_height="@dimen/menu_button_height"
            android:text="@string/menu_options"
            android:textSize="@dimen/menu_sections_textSize"
            android:layout_marginTop="@dimen/menu_button_marginTop"/>
        <Button
            android:id="@+id/menu_exit"
            android:layout_width="@dimen/menu_button_width"
            android:layout_height="@dimen/menu_button_height"
            android:text="@string/menu_exit"
            android:textSize="@dimen/menu_sections_textSize"
            android:layout_marginTop="@dimen/menu_button_marginTop"/>
    </LinearLayout>
</LinearLayout>