<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="@dimen/menu_header_margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_section1_header"
            android:textSize="@dimen/menu_header_textsize"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_line_height"
        android:background="@color/line_color"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/test_section1_but1"
            android:layout_width="@dimen/menu_button_width"
            android:layout_height="@dimen/menu_button_height"
            android:layout_marginTop="@dimen/menu_button_marginTop"
            android:text="@string/test_section1_theme1"/>
        <Button
            android:id="@+id/test_section1_but2"
            android:layout_width="@dimen/menu_button_width"
            android:layout_height="@dimen/menu_button_height"
            android:layout_marginTop="@dimen/menu_button_marginTop"
            android:text="@string/test_section1_theme2"/>
        <Button
            android:id="@+id/test_section1_but3"
            android:layout_width="@dimen/menu_button_width"
            android:layout_height="@dimen/menu_button_height"
            android:layout_marginTop="@dimen/menu_button_marginTop"
            android:text="@string/test_section1_theme3"/>
    </LinearLayout>
</LinearLayout>